feat: optimize model rest api in manager (#2291)
