# api/manager/swagger.yaml
@@ -72,6 +72,27 @@ definitions:
       user_id:
         type: integer
     type: object
+  d7y_io_dragonfly_v2_manager_models.Model:
+    properties:
+      bio:
+        type: string
+      created_at:
+        type: string
+      evaluation:
+        $ref: '#/definitions/d7y_io_dragonfly_v2_manager_models.JSONMap'
+      id:
+        type: integer
+      scheduler_id:
+        type: integer
+      state:
+        type: string
+      type:
+        type: string
+      updated_at:
+        type: string
+      version:
+        type: string
+    type: object
   d7y_io_dragonfly_v2_manager_models.Oauth:
     properties:
       bio:
@@ -362,6 +383,24 @@ definitions:
     required:
     - type
     type: object
+  d7y_io_dragonfly_v2_manager_types.CreateModelRequest:
+    properties:
+      BIO:
+        type: string
+      evaluation:
+        $ref: '#/definitions/d7y_io_dragonfly_v2_manager_types.ModelEvaluation'
+      scheduler_id:
+        type: integer
+      type:
+        type: string
+      version:
+        type: string
+    required:
+    - evaluation
+    - scheduler_id
+    - type
+    - version
+    type: object
   d7y_io_dragonfly_v2_manager_types.CreateOauthRequest:
     properties:
       bio:
@@ -558,6 +597,27 @@ definitions:
       status:
         type: string
     type: object
+  d7y_io_dragonfly_v2_manager_types.ModelEvaluation:
+    properties:
+      f1_score:
+        maximum: 1
+        minimum: 0
+        type: number
+      mae:
+        minimum: 0
+        type: number
+      mse:
+        minimum: 0
+        type: number
+      precision:
+        maximum: 1
+        minimum: 0
+        type: number
+      recall:
+        maximum: 1
+        minimum: 0
+        type: number
+    type: object
   d7y_io_dragonfly_v2_manager_types.PriorityConfig:
     properties:
       urls:
@@ -738,6 +798,20 @@ definitions:
         type: string
       user_id:
         type: integer
+    type: object
+  d7y_io_dragonfly_v2_manager_types.UpdateModelRequest:
+    properties:
+      BIO:
+        type: string
+      evaluation:
+        $ref: '#/definitions/d7y_io_dragonfly_v2_manager_types.ModelEvaluation'
+      scheduler_id:
+        type: integer
+      state:
+        enum:
+        - active
+        - inactive
+        type: string
     type: object
   d7y_io_dragonfly_v2_manager_types.UpdateOauthRequest:
     properties:
@@ -1565,6 +1639,139 @@ paths:
       summary: Update Job
       tags:
       - Job
+  /models:
+    get:
+      consumes:
+      - application/json
+      description: Get Models
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/d7y_io_dragonfly_v2_manager_models.Model'
+            type: array
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Get Models
+      tags:
+      - Model
+    post:
+      consumes:
+      - application/json
+      description: Create Model by json config
+      parameters:
+      - description: Model
+        in: body
+        name: Model
+        required: true
+        schema:
+          $ref: '#/definitions/d7y_io_dragonfly_v2_manager_types.CreateModelRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/d7y_io_dragonfly_v2_manager_models.Model'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Create Model
+      tags:
+      - Model
+  /models/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Destroy by id
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Destroy Model
+      tags:
+      - Model
+    get:
+      consumes:
+      - application/json
+      description: Get Model by id
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/d7y_io_dragonfly_v2_manager_models.Model'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Get Model
+      tags:
+      - Model
+    patch:
+      consumes:
+      - application/json
+      description: Update by json config
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Model
+        in: body
+        name: Model
+        required: true
+        schema:
+          $ref: '#/definitions/d7y_io_dragonfly_v2_manager_types.UpdateModelRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/d7y_io_dragonfly_v2_manager_models.Model'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Update Model
+      tags:
+      - Model
   /oauth:
     get:
       consumes:
