# manager/types/model.go
@@ -30,23 +30,23 @@ type CreateModelRequest struct {
 
 type UpdateModelRequest struct {
 	BIO         string           `json:"BIO" binding:"omitempty"`
-	State       string           `json:"state" binding:"required,oneof=active inactive"`
+	State       string           `json:"state" binding:"omitempty,oneof=active inactive"`
 	Evaluation  *ModelEvaluation `json:"evaluation" binding:"omitempty"`
 	SchedulerID uint             `json:"scheduler_id" binding:"omitempty"`
 }
 
 type GetModelsQuery struct {
 	Type        string `json:"type" binding:"omitempty"`
-	State       string `json:"state" binding:"omitempty,oneof=active inactive"`
+	Version     string `json:"version"  binding:"omitempty"`
 	SchedulerID uint   `json:"scheduler_id" binding:"omitempty"`
 	Page        int    `form:"page" binding:"omitempty,gte=1"`
 	PerPage     int    `form:"per_page" binding:"omitempty,gte=1,lte=1000"`
 }
 
 type ModelEvaluation struct {
-	Recall    float64 `json:"recall" binding:"omitempty"`
-	Precision float64 `json:"precision" binding:"omitempty"`
-	F1Score   float64 `json:"f1_score" binding:"omitempty"`
-	Mse       float64 `json:"mse" binding:"omitempty"`
-	Mae       float64 `json:"mae" binding:"omitempty"`
+	Recall    float64 `json:"recall" binding:"omitempty,gte=0,lte=1"`
+	Precision float64 `json:"precision" binding:"omitempty,gte=0,lte=1"`
+	F1Score   float64 `json:"f1_score" binding:"omitempty,gte=0,lte=1"`
+	MSE       float64 `json:"mse" binding:"omitempty,gte=0"`
+	MAE       float64 `json:"mae" binding:"omitempty,gte=0"`
 }
